Massive improvements to marker depth.

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -34,15 +34,28 @@
 [Constants]
 global $show_depth=0
 ; Variables to keep track of what's happening
-global $allowDepth=0
+global $depth_map=0
+global $allow_depth=0
 global $at_depth=0
-global $drawn_elements=0
+global $new_chars=0
+global $new_sprites=0
+global $num_blobs=0
+global $texts=0
+global $markers=0
 global $goals=0
 global $blobs=0
-global $num_texts=0
-global $num_sprites=0
+global $is_front_text=0
+global $chars=0
+global $chars_temp=0
+global $chars_front=0
+global $chars_back=0
+global $new_texts=0
+global $new_texts_front=0
+global $new_texts_back=0
+global $num_text_draws=0
+global $partial_text_draws=0
 global $intel_texts=0
-global $centre_goals=0
+global $goal_texts=0
 global $marker_boxes=0
 ; Special cases for custom shader
 global $batched=0
@@ -50,15 +63,35 @@ global $text=0
 global $tracker_type=0
 global $crosshair=1
 global $execute_mark=2
+; for debugging (not changed)
+global $match_front_back=1
+global $split_back=1
+global $split_front_1_batched=1
+global $split_front_1=1
+global $split_front_2=1
+global $back=0
 
 [Present]
 ; shouldn't be needed, just in case...
 $at_depth=0
-$goals=0
+$is_front_text=0
+$partial_text_draws=0
+$chars=0
+$chars_front=0
+$chars_back=0
+$new_texts=0
+$new_texts_front=0
+$new_texts_back=0
 ; process last frame behaviour
-$intel_texts = $marker_boxes - $centre_goals
+$intel_texts = $marker_boxes - $goal_texts
+; reset counters
+$depth_map=0
+$texts=0
+$markers=0
+$goals=0
 $marker_boxes=0
-$centre_goals=0
+$goal_texts=0
+Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
 
 [KeyToggleDepth]
 type=cycle
@@ -80,9 +113,8 @@ msaa=1
 
 [ResourceDepthValue]
 type=RWStructuredBuffer
-; 4 * 6 = 24 : the number of scaleform elements
-stride=4
-array=6
+stride=16
+array=16
 
 [CommandListUseDepthBuffer]
 vs-t10=ResourceDepthBuffer
@@ -103,9 +135,19 @@ run=CommandListCalculateDepth
 
 [CommandListCalculateDepth]
 run=BuiltInCommandListUnbindAllRenderTargets
-pre w3=$tracker_type
-post w3=0
-post $tracker_type=0
+; marker_index
+y3 = $markers
+post y3 = 0
+; num_chars
+$\configs\array.ini\index = $markers
+run=CommandList\configs\array.ini\Get
+z3 = $\configs\array.ini\value
+post z3 = 0
+; tracker_type
+w3=$tracker_type
+post w3 = 0
+post $tracker_type = 0
+; run custom shader
 vs-t13=copy vb0
 ps-cb11=ResourceMatrices
 ps-t10=ResourceDepthBuffer
@@ -119,12 +161,14 @@ draw=from_caller
 hash=29b5047597d81be1
 post ResourceDepthBuffer=copy ps-t0
 post ResourceMatrices=copy ps-cb11
+post $depth_map=1
 post run=CommandListDisplayDepth
 
 [ShaderOverride_DepthSourceSonar]
 hash=5fe6d8164825fe0e
 post ResourceDepthBuffer=copy ps-t1
 post ResourceMatrices=copy ps-cb11
+post $depth_map=1
 post run=CommandListDisplayDepth
 
 [CommandListDisplayDepth]
@@ -134,7 +178,7 @@ post run=CommandListDisplayDepth
 ;endif
 
 [CommandListStartDepth]
-if ($allowDepth && !$at_depth)
+if ($allow_depth && !$at_depth)
 	if ($batched)
         run=CustomShaderSampleDepthBatched
 	else
@@ -145,19 +189,33 @@ endif
 run=CommandListUseDepth
 
 [CommandListUseDepth]
-if ($allowDepth && $at_depth)
+if ($allow_depth && $at_depth)
 	; use_depth
 	x3=1
 	post x3=0
+	; marker_index
+	y3=$markers
+	post y3=0
 	pre vs-t14=ResourceDepthValue
 	post vs-t14=null
 endif
 
 [CommandListEndDepth]
-if ($allowDepth && $at_depth)
-	post clear=ResourceDepthValue
-	post $at_depth=0
-	post $num_texts=0
+if ($allow_depth && $at_depth)
+	; If we had a marker without text
+	if ($texts < $markers)
+		$text = $markers
+		$\configs\array.ini\index = $markers
+		$\configs\array.ini\value = 0
+		run=CommandList\configs\array.ini\Set
+	endif
+	; Group batched crosshair elements
+	if (!$text && $batched && $tracker_type == $crosshair)
+		$new_sprites = 1
+	endif
+	$markers = $markers + $new_sprites
+	$at_depth=0
+	$num_text_draws=0
 endif
 
 [ShaderOverride_LightFlares]
@@ -165,51 +223,149 @@ hash=c4c52320554d1ee9
 run=CommandListUseDepthBuffer
 vs-t13=copy vb0
 
-[CommandListText]
-; not useful because it's characters not strings
-;pre $drawn_elements = vertex_count / 6
-; For now, always 1
-pre $drawn_elements = 1
-pre $allowDepth=1
-if ($intel_texts > 0)
-	run=CommandListGoalStart
-	post $num_texts = $num_texts + 1
-	if ($num_texts == 2)
-		post $intel_texts = $intel_texts - $drawn_elements
-		post $num_texts = 0
+[CommandListTextBatched]
+; get cached number of characters
+$\configs\array.ini\index = $markers + $new_texts
+run=CommandList\configs\array.ini\Get
+; avoid stack overflow if no more recorded character counts
+if ($\configs\array.ini\value != 0)
+	; deduct cached length from element count to get remainder
+	$chars_temp = $chars_temp - $\configs\array.ini\value
+	if ($chars_temp >= 0)
+		$new_texts = $new_texts + 1
 	endif
-else if ($centre_goals < $goals)
-	run=CommandListUseDepth
-	post $num_texts = $num_texts + 1
-	if ($num_texts == 2)
-		post $centre_goals = $centre_goals + $drawn_elements
-		post $num_texts = 0
+	if ($chars_temp > 0)
+		; repeat for more text for next goal
+		; pre required to prevent stack overflow
+		pre run=CommandListTextBatched
+	else if ($chars_temp < 0)
+		; partial batch, wait for next draw call
+		$partial_text_draws = $partial_text_draws + 1
 	endif
 endif
-;post Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
-post $allowDepth=0
+
+[CommandListTextInner]
+$num_text_draws = $num_text_draws + 1
+$new_texts = 0
+; append new chars to previous (in case it was partial)
+$chars = $chars + $new_chars
+if ($new_chars % 1 != 0 || $batched)
+	$chars_temp = $chars
+	run=CommandListTextBatched
+else
+	$new_texts = $new_texts + 1
+endif
+; if text for a marker is complete
+if ($is_front_text && $chars == $chars_back && $num_text_draws >= (2 + $partial_text_draws))
+	if (!$batched)
+		; drawing text for single goal, save the number of characters
+		$\configs\array.ini\index = $texts
+		$\configs\array.ini\value = $chars
+		run=CommandList\configs\array.ini\Set
+	endif
+	$texts = $texts + $new_texts
+	$chars = 0
+	$chars_back = 0
+	$new_texts_back = 0
+	$num_text_draws = 0
+	$partial_text_draws = 0
+endif
+
+[CommandListTextFrontOrBack]
+$new_chars = vertex_count / 6
+; Text usually alternates back/front,
+; but sometimes backs are drawn in multiple batches
+; then the front is drawn in one batch
+$\configs\array.ini\index = $texts
+run=CommandList\configs\array.ini\Get
+; front matches back
+if ($chars_back == $new_chars)
+	$is_front_text = $match_front_back
+; back split (two backs drawn already)
+else if ($num_text_draws == 2 && $chars_front == 0)
+	$is_front_text = $split_back
+; front split pt 1 batched (back is complete)
+else if ($batched && $chars_back > 0 && $partial_text_draws == 0)
+	$is_front_text = $split_front_1_batched	
+; front split pt 1 (back matches previous)
+else if ($chars_back > 0 && $chars_back == $\configs\array.ini\value)
+	$is_front_text = $split_front_1
+; front split pt 2 (new front + prev front = back)
+else if ($chars_back > 0 && $chars_front > 0 && $chars_front + $new_chars == $chars_back)
+	$is_front_text = $split_front_2
+else
+	$is_front_text = $back
+endif
+if ($is_front_text)
+	$chars = $chars_front
+	$new_texts = $new_texts_front
+else	
+	$chars = $chars_back
+	$new_texts = $new_texts_back
+endif
+; pass partial num_chars to shader
+z3 = $chars
+post z3 = $chars
+run=CommandListUseDepth
+post run=CommandListTextInner
+if ($is_front_text)
+	post $chars_front = $chars
+	post $new_texts_front = $new_texts
+else
+	post $chars_back = $chars
+	post $new_texts_back = $new_texts
+endif
+
+[CommandListTextIsGoal]
+; text while at depth is part of a centre goal
+if ($texts < $goals && $at_depth)
+	run=CommandListTextFrontOrBack
+	if ($num_text_draws == 0)
+		post $goal_texts = $goal_texts + $new_texts
+		post $new_texts = 0
+	endif
+; intel texts are drawn before any sprites
+else if ($intel_texts > 0)
+	; assume we're at depth
+	$at_depth=1
+	run=CommandListTextFrontOrBack
+	if ($num_text_draws == 0)
+		post $intel_texts = $intel_texts - $new_texts
+		post $new_texts = 0
+	endif
+	post $at_depth=0
+endif
+
+[CommandListTextAtDepth]
+$allow_depth = $depth_map
+post $allow_depth = $depth_map
+if ($allow_depth)
+	run=CommandListTextIsGoal
+endif
+$allow_depth = 0
+post $allow_depth = 0
 
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
 allow_duplicate_hash=true
 $text=1
 $batched=0
-run=CommandListText
+run=CommandListTextAtDepth
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
 allow_duplicate_hash=true
 $text=1
 $batched=1
-run=CommandListText
+run=CommandListTextAtDepth
 
 [CommandListSprite]
-pre $drawn_elements = vertex_count / 6
-pre $allowDepth=1
-post $allowDepth=1
+$new_sprites = vertex_count / 6
+$allow_depth = $depth_map
+post $allow_depth = $depth_map
 checktextureoverride=ps-t0
-pre $allowDepth=0
-post $allowDepth=0
+$allow_depth = 0
+post $allow_depth = 0
 
 [ShaderOverride_Sprites]
 hash=7fdf27a3924d5530
@@ -234,7 +390,7 @@ vs-cb11=ResourceMatrices
 [CommandListCrosshair]
 $tracker_type = $crosshair
 run=CommandListStartDepth
-run=CommandListEndDepth
+post run=CommandListEndDepth
 
 [PresetTriRotor]
 convergence = 75
@@ -258,11 +414,11 @@ preset=PresetTriRotor
 
 [CommandListGoalStart]
 ; Only increment if we're not already drawing a goal
-if ($allowDepth && !$at_depth)
-	pre $blobs=1
-	pre $goals = $goals + $drawn_elements
+if ($allow_depth && !$at_depth)
+	$blobs=1
+	run=CommandListStartDepth
+	$goals = $goals + $new_sprites
 endif
-run=CommandListStartDepth
 
 [TextureOverride_DecoText1]
 hash=88cac974
@@ -280,22 +436,29 @@ run=CommandListUseDepth
 [TextureOverride_GoalArrow]
 hash=73b56261
 run=CommandListUseDepth
-$blobs = $blobs + 1
+if ($allow_depth && $at_depth)
+	$blobs = $blobs + 1
+endif
 [TextureOverride_DecoBox]
 hash=873db96b
-$marker_boxes = $marker_boxes + $drawn_elements
+if ($allow_depth)
+	$marker_boxes = $marker_boxes + $new_sprites
+	if ($blobs == 0)
+		post run=CommandListEndDepth
+	endif
+endif
 run=CommandListUseDepth
 
 [TextureOverride_BlueBlob]
 hash=d860b2d5
 ; Used for lots of things in the HUD, not just markers
-if ($allowDepth && $at_depth)
-	pre $num_sprites = $num_sprites + 1
+if ($allow_depth && $at_depth)
+	pre $num_blobs = $num_blobs + 1
 	run=CommandListUseDepth
-	if ($num_sprites == $blobs)
-		run=CommandListEndDepth
-		$blobs=0
-		$num_sprites=0
+	if ($num_blobs == $blobs)
+		post run=CommandListEndDepth
+		post $blobs=0
+		post $num_blobs=0
 	endif
 endif
 
@@ -309,4 +472,4 @@ run=CommandListUseDepth
 [TextureOverride_ExecuteMarkEnd]
 hash=2971c2e6
 run=CommandListUseDepth
-run=CommandListEndDepth
+post run=CommandListEndDepth
