Improved text edge cases, marker coords in pixels

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -45,6 +45,7 @@ global $markers=0
 global $goals=0
 global $blobs=0
 global $is_front_text=0
+global $unexpected_chars=0
 global $chars=0
 global $chars_temp=0
 global $chars_front=0
@@ -64,11 +65,12 @@ global $tracker_type=0
 global $crosshair=1
 global $execute_mark=2
 ; for debugging (not changed)
-global $match_front_back=1
-global $split_back=1
+global $front_back_match=1
+global $split_back_front=1
 global $split_front_1_batched=1
 global $split_front_1=1
 global $split_front_2=1
+global $split_back=0
 global $back=0
 
 [Present]
@@ -84,6 +86,9 @@ $new_texts_front=0
 $new_texts_back=0
 ; process last frame behaviour
 $intel_texts = $marker_boxes - $goal_texts
+if ($unexpected_chars > 0)
+	run=CommandListSaveUnexpectedChars
+endif
 ; reset counters
 $depth_map=0
 $texts=0
@@ -144,9 +149,8 @@ run=CommandList\configs\array.ini\Get
 z3 = $\configs\array.ini\value
 post z3 = 0
 ; tracker_type
-w3=$tracker_type
+w3 = $tracker_type
 post w3 = 0
-post $tracker_type = 0
 ; run custom shader
 vs-t13=copy vb0
 ps-cb11=ResourceMatrices
@@ -257,19 +261,30 @@ else
 endif
 ; if text for a marker is complete
 if ($is_front_text && $chars == $chars_back && $num_text_draws >= (2 + $partial_text_draws))
-	if (!$batched)
-		; drawing text for single goal, save the number of characters
-		$\configs\array.ini\index = $texts
-		$\configs\array.ini\value = $chars
-		run=CommandList\configs\array.ini\Set
-	endif
-	$texts = $texts + $new_texts
-	$chars = 0
-	$chars_back = 0
-	$new_texts_back = 0
-	$num_text_draws = 0
-	$partial_text_draws = 0
+	run=CommandListCacheText
 endif
+
+[CommandListCacheText]
+if (!$batched)
+	; drawing text for single goal, save the number of characters
+	$\configs\array.ini\index = $texts
+	$\configs\array.ini\value = $chars
+	run=CommandList\configs\array.ini\Set
+endif
+$texts = $texts + $new_texts
+$chars = 0
+$chars_back = 0
+$new_texts_back = 0
+$num_text_draws = 0
+$partial_text_draws = 0
+
+[CommandListSaveUnexpectedChars]
+$chars = $unexpected_chars
+if (!$batched)
+	$new_texts = 1
+	run=CommandListCacheText
+endif
+$unexpected_chars = 0
 
 [CommandListTextFrontOrBack]
 $new_chars = vertex_count / 6
@@ -278,23 +293,44 @@ $new_chars = vertex_count / 6
 ; then the front is drawn in one batch
 $\configs\array.ini\index = $texts
 run=CommandList\configs\array.ini\Get
-; front matches back
-if ($chars_back == $new_chars)
-	$is_front_text = $match_front_back
-; back split (two backs drawn already)
-else if ($num_text_draws == 2 && $chars_front == 0)
-	$is_front_text = $split_back
-; front split pt 1 batched (back is complete)
-else if ($batched && $chars_back > 0 && $partial_text_draws == 0)
-	$is_front_text = $split_front_1_batched	
-; front split pt 1 (back matches previous)
-else if ($chars_back > 0 && $chars_back == $\configs\array.ini\value)
-	$is_front_text = $split_front_1
-; front split pt 2 (new front + prev front = back)
-else if ($chars_back > 0 && $chars_front > 0 && $chars_front + $new_chars == $chars_back)
-	$is_front_text = $split_front_2
-else
+; last text was not split, so update cache like we would have for last text
+if ($unexpected_chars != 0 && $new_chars != $\configs\array.ini\value)
+	$chars_temp = $chars
+	run=CommandListSaveUnexpectedChars
+	$chars = $chars_temp
+endif
+; nothing set, it's the back
+if ($chars_back == 0)
 	$is_front_text = $back
+else
+	; back split evenly, batched  (looks like a match, but it's not if partial)
+	if ($chars_back == $new_chars && $batched && $num_text_draws == 2 && $partial_text_draws != 0)
+		$is_front_text = $split_back
+	; front matches back
+	else if ($chars_back == $new_chars)
+		; matches last frame (or batch with no partials)
+		if ($batched || $new_chars == $\configs\array.ini\value)
+			$is_front_text = $front_back_match
+		else
+			; text may have been back split evenly, so wait for next text
+			$unexpected_chars = $new_chars
+			$is_front_text = $split_back
+		endif
+	; back split (two backs drawn already)
+	else if ($num_text_draws == 2 && $chars_front == 0)
+		$is_front_text = $split_back_front
+	; front split pt 1 batched (back is complete)
+	else if ($batched && $partial_text_draws == 0)
+		$is_front_text = $split_front_1_batched	
+	; front split pt 1 (back matches previous)
+	else if ($chars_back == $\configs\array.ini\value)
+		$is_front_text = $split_front_1
+	; front split pt 2 (new front + prev front = back)
+	else if ($chars_front > 0 && $chars_front + $new_chars == $chars_back)
+		$is_front_text = $split_front_2
+	else	
+		$is_front_text = $split_back
+	endif
 endif
 if ($is_front_text)
 	$chars = $chars_front
@@ -305,7 +341,7 @@ else
 endif
 ; pass partial num_chars to shader
 z3 = $chars
-post z3 = $chars
+post z3 = 0
 run=CommandListUseDepth
 post run=CommandListTextInner
 if ($is_front_text)
@@ -319,6 +355,9 @@ endif
 [CommandListTextIsGoal]
 ; text while at depth is part of a centre goal
 if ($texts < $goals && $at_depth)
+	; goals are after intel, so just in case
+	; one has disappeared, clear the counter
+	$intel_texts = 0
 	run=CommandListTextFrontOrBack
 	if ($num_text_draws == 0)
 		post $goal_texts = $goal_texts + $new_texts
@@ -348,15 +387,15 @@ post $allow_depth = 0
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
 allow_duplicate_hash=true
-$text=1
-$batched=0
+$text = 1
+$batched = 0
 run=CommandListTextAtDepth
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
 allow_duplicate_hash=true
-$text=1
-$batched=1
+$text = 1
+$batched = 1
 run=CommandListTextAtDepth
 
 [CommandListSprite]
@@ -370,15 +409,15 @@ post $allow_depth = 0
 [ShaderOverride_Sprites]
 hash=7fdf27a3924d5530
 allow_duplicate_hash=true
-$text=0
-$batched=0
+$text = 0
+$batched = 0
 run=CommandListSprite
 
 [ShaderOverride_SpritesBatched]
 hash=55642c752fa497f2
 allow_duplicate_hash=true
-$text=0
-$batched=1
+$text = 0
+$batched = 1
 run=CommandListSprite
 
 [ShaderOverride_BlockColourBatched]
@@ -391,6 +430,7 @@ vs-cb11=ResourceMatrices
 $tracker_type = $crosshair
 run=CommandListStartDepth
 post run=CommandListEndDepth
+post $tracker_type = 0
 
 [PresetTriRotor]
 convergence = 75
@@ -466,6 +506,7 @@ endif
 hash=90d0b12f
 $tracker_type = $execute_mark
 run=CommandListStartDepth
+post $tracker_type = 0
 [TextureOverride_ExecuteMarkMiddle]
 hash=62de70a7
 run=CommandListUseDepth
