depth renames and shader adjustments

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -61,9 +61,9 @@ global $marker_boxes=0
 ; Special cases for custom shader
 global $batched=0
 global $text=0
-global $tracker_type=0
+global $marker_type=0
 global $crosshair=1
-global $execute_mark=2
+global $execute=2
 ; for debugging (not changed)
 global $front_back_match=1
 global $split_back_front=1
@@ -96,7 +96,7 @@ $markers=0
 $goals=0
 $marker_boxes=0
 $goal_texts=0
-Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
+;Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
 
 [KeyToggleDepth]
 type=cycle
@@ -148,8 +148,8 @@ $\configs\array.ini\index = $markers
 run=CommandList\configs\array.ini\Get
 z3 = $\configs\array.ini\value
 post z3 = 0
-; tracker_type
-w3 = $tracker_type
+; marker_type
+w3 = $marker_type
 post w3 = 0
 ; run custom shader
 vs-t13=copy vb0
@@ -176,10 +176,11 @@ post $depth_map=1
 post run=CommandListDisplayDepth
 
 [CommandListDisplayDepth]
-;if ($show_depth)
-;Resource\Addons\debug_2d.ini\Debug2D=ResourceDepthBuffer
-;ps-cb11=ResourceMatrices
-;endif
+if ($show_depth)
+	;Resource\Addons\debug_2d.ini\Debug2D=ResourceDepthBuffer
+else
+	;Resource\Addons\debug_2d.ini\Debug2D=null
+endif
 
 [CommandListStartDepth]
 if ($allow_depth && !$at_depth)
@@ -188,18 +189,18 @@ if ($allow_depth && !$at_depth)
 	else
         run=CustomShaderSampleDepth
 	endif
-	pre $at_depth=1
+	$at_depth = 1
 endif
 run=CommandListUseDepth
 
 [CommandListUseDepth]
 if ($allow_depth && $at_depth)
 	; use_depth
-	x3=1
-	post x3=0
+	x3 = 1
+	post x3 = 0
 	; marker_index
-	y3=$markers
-	post y3=0
+	y3 = $markers
+	post y3 = 0
 	pre vs-t14=ResourceDepthValue
 	post vs-t14=null
 endif
@@ -212,10 +213,6 @@ if ($allow_depth && $at_depth)
 		$\configs\array.ini\index = $markers
 		$\configs\array.ini\value = 0
 		run=CommandList\configs\array.ini\Set
-	endif
-	; Group batched crosshair elements
-	if (!$text && $batched && $tracker_type == $crosshair)
-		$new_sprites = 1
 	endif
 	$markers = $markers + $new_sprites
 	$at_depth=0
@@ -427,10 +424,12 @@ run=CommandListSetDepthVariables
 vs-cb11=ResourceMatrices
 
 [CommandListCrosshair]
-$tracker_type = $crosshair
+$marker_type = $crosshair
+; treat crosshair as one element
+$new_sprites = 1
 run=CommandListStartDepth
 post run=CommandListEndDepth
-post $tracker_type = 0
+post $marker_type = 0
 
 [PresetTriRotor]
 convergence = 75
@@ -504,9 +503,9 @@ endif
 
 [TextureOverride_ExecuteMarkStart]
 hash=90d0b12f
-$tracker_type = $execute_mark
+$marker_type = $execute
 run=CommandListStartDepth
-post $tracker_type = 0
+post $marker_type = 0
 [TextureOverride_ExecuteMarkMiddle]
 hash=62de70a7
 run=CommandListUseDepth
