fixed very weird issue with depth that wasted a day...

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -201,6 +201,9 @@ if ($allow_depth && $at_depth)
 	; marker_index
 	y3 = $markers
 	post y3 = 0
+	; marker_type
+	w3 = $marker_type
+	post w3 = 0
 	pre vs-t14=ResourceDepthValue
 	post vs-t14=null
 endif
