Fixed depth issues!

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -78,6 +78,7 @@ global $back=0
 $at_depth=0
 $is_front_text=0
 $partial_text_draws=0
+$num_blobs=0
 $chars=0
 $chars_front=0
 $chars_back=0
@@ -161,15 +162,8 @@ ps-u1=ResourceDepthValue
 post ps-u1=null
 draw=from_caller
 
-[ShaderOverride_DepthSource]
-hash=29b5047597d81be1
-post ResourceDepthBuffer=copy ps-t0
-post ResourceMatrices=copy ps-cb11
-post $depth_map=1
-post run=CommandListDisplayDepth
-
-[ShaderOverride_DepthSourceSonar]
-hash=5fe6d8164825fe0e
+[ShaderOverride_DepthSourceShadowBlur]
+hash=60187e629aa8f9cd
 post ResourceDepthBuffer=copy ps-t1
 post ResourceMatrices=copy ps-cb11
 post $depth_map=1
@@ -218,7 +212,7 @@ if ($allow_depth && $at_depth)
 		run=CommandList\configs\array.ini\Set
 	endif
 	$markers = $markers + $new_sprites
-	$at_depth=0
+	$at_depth = 0
 	$num_text_draws=0
 endif
 
@@ -355,15 +349,11 @@ endif
 [CommandListTextIsGoal]
 ; text while at depth is part of a centre goal
 if ($texts < $goals && $at_depth)
-	; goals are after intel, so just in case
-	; one has disappeared, clear the counter
-	$intel_texts = 0
 	run=CommandListTextFrontOrBack
 	if ($num_text_draws == 0)
 		post $goal_texts = $goal_texts + $new_texts
 		post $new_texts = 0
 	endif
-; intel texts are drawn before any sprites
 else if ($intel_texts > 0)
 	; assume we're at depth
 	$at_depth=1
@@ -457,10 +447,10 @@ preset=PresetTriRotor
 [CommandListGoalStart]
 ; Only increment if we're not already drawing a goal
 if ($allow_depth && !$at_depth)
-	$blobs=1
-	run=CommandListStartDepth
-	$goals = $goals + $new_sprites
+	pre $blobs=1
+	post $goals = $goals + $new_sprites
 endif
+run=CommandListStartDepth
 
 [TextureOverride_DecoText1]
 hash=88cac974
@@ -499,8 +489,8 @@ if ($allow_depth && $at_depth)
 	run=CommandListUseDepth
 	if ($num_blobs == $blobs)
 		post run=CommandListEndDepth
-		post $blobs=0
-		post $num_blobs=0
+		post $blobs = 0
+		post $num_blobs = 0
 	endif
 endif
 
