Disabled 2DD, changed green text

--- a/d3dx.ini
+++ b/d3dx.ini
@@ -1039,22 +1039,22 @@ StereoConvergence = 150
 ;
 ; This changes the green text that the driver displays, and is a good place to
 ; put any reminders to display to the user or just take some credit:
-;Comments = "Such and such 3D fix by an awesome modder. Disable motion blur!"
+Comments = "Splinter Cell: Blacklist DX11 by Nintynuts. Square Brackets Adjust GUI separation."
 ;
 ; Change the rating: "0": 3D Vision Ready, "1": Excellent, "2": Good,
 ;                    "3": Fair, "4": Not Recommended
-;Compat = "0"
+Compat = "0"
 ;
 ; If you have added some comments, you probably want to force the green text to
 ; show up when the game is next run. Note that like convergence, 3DMigoto will
 ; only override a user setting here if something else has also been updated
 ; (such as Comments), so this will usually only show up the first time a user
 ; runs the game after installing the fix (be sure to enable StereoProfile).
-;StereoMemoEnabled = 1
+StereoMemoEnabled = 1
 ;
 ; Disable compatibility mode to make sure users are seeing the real deal. Like
 ; convergence, 3DMigoto will respect the users custom settings here:
-;Disable2DD = 1
+Disable2DD = 1
 ;
 ; Put a reminder in the green text of compatibility mode that they are not
 ; seeing the real deal:
