Improved handling of goals appearing

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -45,7 +45,9 @@ global $markers=0
 global $goals=0
 global $blobs=0
 global $is_front_text=0
+global $is_goal=0
 global $unexpected_chars=0
+global $unexpected_goal=0
 global $chars=0
 global $chars_temp=0
 global $chars_front=0
@@ -86,10 +88,11 @@ $new_texts=0
 $new_texts_front=0
 $new_texts_back=0
 ; process last frame behaviour
-$intel_texts = $marker_boxes - $goal_texts
 if ($unexpected_chars > 0)
+	$is_goal = $unexpected_goal
 	run=CommandListSaveUnexpectedChars
 endif
+$intel_texts = $marker_boxes - $goal_texts
 ; reset counters
 $depth_map=0
 $texts=0
@@ -271,6 +274,12 @@ $chars_back = 0
 $new_texts_back = 0
 $num_text_draws = 0
 $partial_text_draws = 0
+if ($is_goal)
+	$goal_texts = $goal_texts + $new_texts
+else
+	$intel_texts = $intel_texts - $new_texts
+endif
+$new_texts = 0
 
 [CommandListSaveUnexpectedChars]
 $chars = $unexpected_chars
@@ -285,14 +294,15 @@ $new_chars = vertex_count / 6
 ; Text usually alternates back/front,
 ; but sometimes backs are drawn in multiple batches
 ; then the front is drawn in one batch
+; last text was not split, so update cache like we would have for last text as new
+if ($unexpected_chars != 0 && $chars_back != $new_chars)
+	$chars_temp = $is_goal
+	$is_goal = $unexpected_goal
+	run=CommandListSaveUnexpectedChars
+	$is_goal = $chars_temp
+endif
 $\configs\array.ini\index = $texts
 run=CommandList\configs\array.ini\Get
-; last text was not split, so update cache like we would have for last text
-if ($unexpected_chars != 0 && $new_chars != $\configs\array.ini\value)
-	$chars_temp = $chars
-	run=CommandListSaveUnexpectedChars
-	$chars = $chars_temp
-endif
 ; nothing set, it's the back
 if ($chars_back == 0)
 	$is_front_text = $back
@@ -306,8 +316,9 @@ else
 		if ($batched || $new_chars == $\configs\array.ini\value)
 			$is_front_text = $front_back_match
 		else
-			; text may have been back split evenly, so wait for next text
+			; text might be new or back split evenly, so wait for next text
 			$unexpected_chars = $new_chars
+			$unexpected_goal = $is_goal
 			$is_front_text = $split_back
 		endif
 	; back split (two backs drawn already)
@@ -349,19 +360,13 @@ endif
 [CommandListTextIsGoal]
 ; text while at depth is part of a centre goal
 if ($texts < $goals && $at_depth)
+	$is_goal = 1
 	run=CommandListTextFrontOrBack
-	if ($num_text_draws == 0)
-		post $goal_texts = $goal_texts + $new_texts
-		post $new_texts = 0
-	endif
 else if ($intel_texts > 0)
 	; assume we're at depth
-	$at_depth=1
+	$at_depth = 1
+	$is_goal = 0
 	run=CommandListTextFrontOrBack
-	if ($num_text_draws == 0)
-		post $intel_texts = $intel_texts - $new_texts
-		post $new_texts = 0
-	endif
 	post $at_depth=0
 endif
 
@@ -387,6 +392,7 @@ allow_duplicate_hash=true
 $text = 1
 $batched = 1
 run=CommandListTextAtDepth
+post $batched = 0
 
 [CommandListSprite]
 $new_sprites = vertex_count / 6
@@ -409,6 +415,7 @@ allow_duplicate_hash=true
 $text = 0
 $batched = 1
 run=CommandListSprite
+post $batched = 0
 
 [ShaderOverride_BlockColourBatched]
 hash=07a16668ff270883
@@ -448,7 +455,7 @@ preset=PresetTriRotor
 ; Only increment if we're not already drawing a goal
 if ($allow_depth && !$at_depth)
 	pre $blobs=1
-	post $goals = $goals + $new_sprites
+	pre $goals = $goals + $new_sprites
 endif
 run=CommandListStartDepth
 
@@ -461,6 +468,15 @@ run=CommandListGoalStart
 [TextureOverride_GoalOuter]
 hash=89951c97
 run=CommandListGoalStart
+[TextureOverride_DecoBox]
+hash=873db96b
+run=CommandListGoalStart
+if ($allow_depth)
+	$marker_boxes = $marker_boxes + $new_sprites
+	if ($blobs == 0)
+		post run=CommandListEndDepth
+	endif
+endif
 
 [TextureOverride_GoalCentre]
 hash=b5e01512
@@ -471,15 +487,6 @@ run=CommandListUseDepth
 if ($allow_depth && $at_depth)
 	$blobs = $blobs + 1
 endif
-[TextureOverride_DecoBox]
-hash=873db96b
-if ($allow_depth)
-	$marker_boxes = $marker_boxes + $new_sprites
-	if ($blobs == 0)
-		post run=CommandListEndDepth
-	endif
-endif
-run=CommandListUseDepth
 
 [TextureOverride_BlueBlob]
 hash=d860b2d5
