Markers almost perfect!

--- a/Configs/Depth.ini
+++ b/Configs/Depth.ini
@@ -1,17 +1,17 @@
 ; [HUD elements at Depth]
-; There are several types of element we want to push to depth:
+; There are several types of element we want to push to depth (after depth map is complete):
 ; - Light flare: Drawn at screen depth so we use the depth buffer to push each to depth.
 ;                Accesses the depth buffer directly via a different mechanism.
-; - Crosshair:   Sprites which always use the depth from the middle(ish) of the screen.
-; - Centre goal: These have text and several sprites including a DecoBox. 
+; - Intel:       These have text drawn before sprites and before other markers.
+;                We use the previous frame's behaviour to include this text each frame.
+; - Centre goal: These have text and several sprites. 
 ;                The text is drawn mid-way so we know it's included.
-;                It ends with a single BlueBlob sprite.
+;                It ends with a single blob.
 ; - Edge goal:   These are like centre goals, but have an extra arrow sprite and no text.
-;                They have 2 BlueBlob sprites drawn at the end because of the arrow.
+;                They have 2 blobs drawn at the end because of the arrow.
 ; - Execute:     These are 3 simple sprites drawn in order, but the depth is sampled
 ;                below to try and hit the target, instead of going over their head.
-; - Intel:       These have a DecoBox, but the text is drawn before and first per frame.
-;                We use the previous frame's behaviour to include this text each frame.
+; - Crosshair:   Sprites which always use the depth from the middle(ish) of the screen.
 ;
 ; With the exception of light flares, these are all 'Markers'. 
 ;
@@ -23,13 +23,19 @@
 ; appropriate by TextureOverrides for sprites and ShaderOverrides for text, 
 ; because text textures are generated at runtime and don't have a fixed hash.
 ;
-; Both text and sprites can be batched, meaning up to 24 can be drawn in one draw call.
-; We calculate the depth for each quad in this batch, and hope that subsequent batches 
-; are drawn in the same order to re-use the depth with the same index. 
+; Both text and sprites can be batched, meaning up to 24 quads can be drawn in one draw call.
+; For sprites, we calculate the depth for each quad in the batch, and hope that subsequent 
+; batches are drawn in the same order to re-use the depth with the same ordering. 
 ;
-; Text is also drawn twice, first a blurred background and then the crisp foreground.
-; Batching is a problem for Text, because it draws characters separately, meaning more 
-; than one depth is recorded for each marker (throwing off the indexing).
+; Text is usually drawn twice, first a blurred background and then the crisp foreground.
+; Each draw call is made up of several quads, each an individual character.
+; Batching and splitting are issues that needs lots of logic to handle. 
+; Batching means more than one marker can be drawn at once. Character lengths are cached 
+; in a buffer and 'array' when batching is not active to be recalled when batching is active.
+; Splitting is quite random and affects both batched and unbatched text. This presents 
+; in multiple forms, front split and back split, where 3 draw calls will occur. Sometimes
+; this will be half character splits which are easy to detect, and sometimes it will be 
+; even splits, which require waiting for the next draw call to make a decision.
 
 [Constants]
 global $show_depth=0
@@ -37,29 +43,31 @@ global $show_depth=0
 global $depth_map=0
 global $allow_depth=0
 global $at_depth=0
-global $new_chars=0
-global $new_sprites=0
-global $num_blobs=0
+; general counters
 global $texts=0
 global $markers=0
+global $intel=0
+global $intel_prev=0
 global $goals=0
-global $blobs=0
+; text variables
+global $new_chars=0
 global $is_front_text=0
-global $is_goal=0
-global $unexpected_chars=0
-global $unexpected_goal=0
-global $chars=0
 global $chars_temp=0
+global $chars=0
 global $chars_front=0
 global $chars_back=0
 global $new_texts=0
 global $new_texts_front=0
 global $new_texts_back=0
-global $num_text_draws=0
-global $partial_text_draws=0
-global $intel_texts=0
-global $goal_texts=0
-global $marker_boxes=0
+global $is_goal=0
+global $unknown_chars=0
+global $unknown_is_goal=0
+global $texts_drawn=0
+global $extra_drawn=0
+; sprite variables
+global $new_sprites=0
+global $blobs=0
+global $req_blobs=0
 ; Special cases for custom shader
 global $batched=0
 global $text=0
@@ -76,30 +84,20 @@ global $split_back=0
 global $back=0
 
 [Present]
-; shouldn't be needed, just in case...
-$at_depth=0
-$is_front_text=0
-$partial_text_draws=0
-$num_blobs=0
-$chars=0
-$chars_front=0
-$chars_back=0
-$new_texts=0
-$new_texts_front=0
-$new_texts_back=0
 ; process last frame behaviour
-if ($unexpected_chars > 0)
-	$is_goal = $unexpected_goal
-	run=CommandListSaveUnexpectedChars
+if ($unknown_chars > 0)
+	run=CommandListSaveUnknownChars
 endif
-$intel_texts = $marker_boxes - $goal_texts
+$intel_prev = $intel
+if ($intel_prev < $markers - $goals)
+	$intel_prev = $markers - $goals
+endif
 ; reset counters
 $depth_map=0
 $texts=0
 $markers=0
 $goals=0
-$marker_boxes=0
-$goal_texts=0
+$intel=0
 ;Resource\Addons\debug_cb.ini\debugcb=copy ResourceDepthValue
 
 [KeyToggleDepth]
@@ -216,7 +214,7 @@ if ($allow_depth && $at_depth)
 	endif
 	$markers = $markers + $new_sprites
 	$at_depth = 0
-	$num_text_draws=0
+	$texts_drawn=0
 endif
 
 [ShaderOverride_LightFlares]
@@ -241,23 +239,23 @@ if ($\configs\array.ini\value != 0)
 		pre run=CommandListTextBatched
 	else if ($chars_temp < 0)
 		; partial batch, wait for next draw call
-		$partial_text_draws = $partial_text_draws + 1
+		$extra_drawn = $extra_drawn + 1
 	endif
 endif
 
 [CommandListTextInner]
-$num_text_draws = $num_text_draws + 1
+$texts_drawn = $texts_drawn + 1
 $new_texts = 0
 ; append new chars to previous (in case it was partial)
 $chars = $chars + $new_chars
-if ($new_chars % 1 != 0 || $batched)
+if ($batched)
 	$chars_temp = $chars
 	run=CommandListTextBatched
-else
+else if ($new_chars % 1 == 0)
 	$new_texts = $new_texts + 1
 endif
 ; if text for a marker is complete
-if ($is_front_text && $chars == $chars_back && $num_text_draws >= (2 + $partial_text_draws))
+if ($is_front_text && $chars == $chars_back && $texts_drawn == (2 + $extra_drawn))
 	run=CommandListCacheText
 endif
 
@@ -272,22 +270,21 @@ $texts = $texts + $new_texts
 $chars = 0
 $chars_back = 0
 $new_texts_back = 0
-$num_text_draws = 0
-$partial_text_draws = 0
-if ($is_goal)
-	$goal_texts = $goal_texts + $new_texts
-else
-	$intel_texts = $intel_texts - $new_texts
+$texts_drawn = 0
+$extra_drawn = 0
+if (!$is_goal)
+	$intel = $intel + $new_texts
 endif
 $new_texts = 0
 
-[CommandListSaveUnexpectedChars]
-$chars = $unexpected_chars
+[CommandListSaveUnknownChars]
+$is_goal = $unknown_is_goal
+$chars = $unknown_chars
 if (!$batched)
 	$new_texts = 1
 	run=CommandListCacheText
 endif
-$unexpected_chars = 0
+$unknown_chars = 0
 
 [CommandListTextFrontOrBack]
 $new_chars = vertex_count / 6
@@ -295,10 +292,9 @@ $new_chars = vertex_count / 6
 ; but sometimes backs are drawn in multiple batches
 ; then the front is drawn in one batch
 ; last text was not split, so update cache like we would have for last text as new
-if ($unexpected_chars != 0 && $chars_back != $new_chars)
+if ($unknown_chars != 0 && $chars_back != $new_chars)
 	$chars_temp = $is_goal
-	$is_goal = $unexpected_goal
-	run=CommandListSaveUnexpectedChars
+	run=CommandListSaveUnknownChars
 	$is_goal = $chars_temp
 endif
 $\configs\array.ini\index = $texts
@@ -308,33 +304,37 @@ if ($chars_back == 0)
 	$is_front_text = $back
 else
 	; back split evenly, batched  (looks like a match, but it's not if partial)
-	if ($chars_back == $new_chars && $batched && $num_text_draws == 2 && $partial_text_draws != 0)
+	if ($chars_back == $new_chars && $batched && $texts_drawn == 2 && $extra_drawn != 0)
 		$is_front_text = $split_back
+		$extra_drawn = $extra_drawn + 1
 	; front matches back
 	else if ($chars_back == $new_chars)
 		; matches last frame (or batch with no partials)
 		if ($batched || $new_chars == $\configs\array.ini\value)
 			$is_front_text = $front_back_match
+			$unknown_chars = 0
 		else
 			; text might be new or back split evenly, so wait for next text
-			$unexpected_chars = $new_chars
-			$unexpected_goal = $is_goal
+			$unknown_chars = $new_chars
+			$unknown_is_goal = $is_goal
 			$is_front_text = $split_back
 		endif
 	; back split (two backs drawn already)
-	else if ($num_text_draws == 2 && $chars_front == 0)
+	else if ($texts_drawn == 2 && $chars_front == 0)
 		$is_front_text = $split_back_front
 	; front split pt 1 batched (back is complete)
-	else if ($batched && $partial_text_draws == 0)
+	else if ($batched && $extra_drawn == 0)
 		$is_front_text = $split_front_1_batched	
-	; front split pt 1 (back matches previous)
-	else if ($chars_back == $\configs\array.ini\value)
-		$is_front_text = $split_front_1
 	; front split pt 2 (new front + prev front = back)
 	else if ($chars_front > 0 && $chars_front + $new_chars == $chars_back)
 		$is_front_text = $split_front_2
+	; front split pt 1 (back matches previous)
+	else if ($chars_back == $\configs\array.ini\value)
+		$is_front_text = $split_front_1
+		$extra_drawn = $extra_drawn + 1
 	else	
 		$is_front_text = $split_back
+		$extra_drawn = $extra_drawn + 1
 	endif
 endif
 if ($is_front_text)
@@ -359,10 +359,10 @@ endif
 
 [CommandListTextIsGoal]
 ; text while at depth is part of a centre goal
-if ($texts < $goals && $at_depth)
+if (($texts - $intel) < $goals && $at_depth)
 	$is_goal = 1
 	run=CommandListTextFrontOrBack
-else if ($intel_texts > 0)
+else if ($intel_prev > 0 && $goals == 0)
 	; assume we're at depth
 	$at_depth = 1
 	$is_goal = 0
@@ -451,55 +451,69 @@ hash=0a5f1dbb
 run=CommandListCrosshair
 preset=PresetTriRotor
 
-[CommandListGoalStart]
+[CommandListBlobMarkerStart]
 ; Only increment if we're not already drawing a goal
 if ($allow_depth && !$at_depth)
-	pre $blobs=1
-	pre $goals = $goals + $new_sprites
+	pre $req_blobs=1
 endif
 run=CommandListStartDepth
 
-[TextureOverride_DecoText1]
-hash=88cac974
-run=CommandListGoalStart
-[TextureOverride_DecoText2]
-hash=d5f8a4d4
-run=CommandListGoalStart
+; These textures are in the order they are drawn, 
+; but each are optional in different circumstances the 
+; only consistent thing is the blob is drawn last
 [TextureOverride_GoalOuter]
 hash=89951c97
-run=CommandListGoalStart
-[TextureOverride_DecoBox]
-hash=873db96b
-run=CommandListGoalStart
+; start of goal while not transitioning off-screen
 if ($allow_depth)
-	$marker_boxes = $marker_boxes + $new_sprites
-	if ($blobs == 0)
-		post run=CommandListEndDepth
-	endif
+	pre $goals = $goals + $new_sprites
 endif
-
+run=CommandListBlobMarkerStart
 [TextureOverride_GoalCentre]
 hash=b5e01512
+; optional part of a goal
 run=CommandListUseDepth
 [TextureOverride_GoalArrow]
 hash=73b56261
-run=CommandListUseDepth
-if ($allow_depth && $at_depth)
-	$blobs = $blobs + 1
+; start of a goal when transitioning off-screen
+if ($allow_depth && !$at_depth)
+	pre $goals = $goals + $new_sprites
 endif
-
+run=CommandListBlobMarkerStart
+; extra blob is drawn when an arrow is drawn
+if ($allow_depth && $at_depth)
+	$req_blobs = $req_blobs + 1
+endif
+[TextureOverride_DecoText1]
+hash=88cac974
+; start of intel when visible, part of centre goal alternates with DecoText2
+run=CommandListBlobMarkerStart
+[TextureOverride_DecoText2]
+hash=d5f8a4d4
+; start of intel when visible, part of centre goal alternates with DecoText1
+run=CommandListBlobMarkerStart
+[TextureOverride_DecoBox]
+hash=873db96b
+; start of intel when appearing, part of centre goal
+run=CommandListBlobMarkerStart
 [TextureOverride_BlueBlob]
 hash=d860b2d5
 ; Used for lots of things in the HUD, not just markers
-if ($allow_depth && $at_depth)
-	pre $num_blobs = $num_blobs + 1
-	run=CommandListUseDepth
-	if ($num_blobs == $blobs)
-		post run=CommandListEndDepth
-		post $blobs = 0
-		post $num_blobs = 0
+if ($allow_depth)
+	; start of an intel when it is disappearing
+	if ($intel > $markers)
+		run=CommandListBlobMarkerStart
+	endif
+	if ($at_depth)
+		pre $blobs = $blobs + 1
+		run=CommandListUseDepth
+		if ($blobs == $req_blobs)
+			post run=CommandListEndDepth
+			post $req_blobs = 0
+			post $blobs = 0
+		endif
 	endif
 endif
+
 
 [TextureOverride_ExecuteMarkStart]
 hash=90d0b12f
